--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ package_dir=
 packages = find:
 install_requires =
     importlib-metadata==4.11.4
+    importlib-resources==5.7.1
     PyQt5==5.15.6
     PyQt5-Qt5==5.15.2
     PyQt5-sip==12.10.1
@@ -38,6 +39,10 @@ install_requires =
 
 [options.packages.find]
 where = src
+
+[options.package_data]
+* =
+    *.png
 
 [options.entry_points]
 console_scripts =
