Adding pup paramenters to project's metadata.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = QuTTY
-version = 1.2.0
+version = 1.3.0
 description = QuTTY, a minimal GUI app to test pup.
 long_description = file: README.rst
 long_description_content_type = text/x-rst
@@ -47,3 +47,10 @@ where = src
 [options.entry_points]
 console_scripts =
     qutty = qutty.__main__:main
+
+[options.extras_require]
+pup =
+    icon-path==./src/qutty/logo.png
+    license-path==./LICENSE
+    launch-module==qutty
+
